--- a/siva-parent/pom.xml
+++ b/siva-parent/pom.xml
@@ -17,6 +17,7 @@
         <module>siva-webapp</module>
         <module>siva-sample-application</module>
         <module>siva-test</module>
+        <module>siva-distribution</module>
     </modules>
 
     <properties>
@@ -194,14 +195,6 @@
             <id>java.net</id>
             <url>http://download.java.net/maven/2/</url>
         </repository>
-        <!--<repository>
-            <id>joinup-mocca-thirparty</id>
-            <url>http://joinup.ec.europa.eu/site/mocca/m2/repository/</url>
-        </repository>
-        <repository>
-            <id>joinup-dss-thirdparty</id>
-            <url>http://joinup.ec.europa.eu/site/sd-dss/maven2</url>
-        </repository>-->
         <repository>
             <id>spring-snapshots</id>
             <url>http://repo.spring.io/snapshot</url>
@@ -227,8 +220,8 @@
                 <enabled>true</enabled>
             </snapshots>
         </repository>
-
     </repositories>
+
     <pluginRepositories>
         <pluginRepository>
             <id>spring-snapshots</id>
