--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ sudo: false
 jdk:
 - oraclejdk8
 before_install:
+- openssl aes-256-cbc -K $encrypted_befc5bd7f29f_key -iv $encrypted_befc5bd7f29f_iv
+  -in ci-deploy-key.enc -out ci-deploy-key -d
 - export TZ=Estonia/Tallinn
 branches:
   only:
@@ -12,8 +14,10 @@ script:
 - "./mvnw clean install -q"
 after_success:
 - "./mvnw jacoco:report coveralls:report -q -Dcoveralls.repo.token=$COVERALLS_REPO_TOKEN"
-- mkdir ${TRAVIS_BUILD_DIR}/artifacts && cp ${TRAVIS_BUILD_DIR}/siva-parent/siva-distribution/target/*.zip artifacts
-- ls -al artifacts
+- mkdir ${TRAVIS_BUILD_DIR}/artifacts && cp ${TRAVIS_BUILD_DIR}/siva-parent/siva-distribution/target/*.zip
+  artifacts
+- mv artifacts/*.zip artifacts/distribution.zip && ls -al artifacts
+- "./${TRAVIS_BUILD_DIR}/deploy.sh"
 deploy:
   provider: s3
   access_key_id: AKIAJPTKESQQK3GFXN2Q
