--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ after_success:
 - mkdir ${TRAVIS_BUILD_DIR}/artifacts && cp ${TRAVIS_BUILD_DIR}/siva-parent/siva-distribution/target/*.zip
   artifacts
 - mv artifacts/*.zip artifacts/distribution.zip && ls -al artifacts
-- "./${TRAVIS_BUILD_DIR}/deploy.sh"
+- "${TRAVIS_BUILD_DIR}/deploy.sh"
 deploy:
   provider: s3
   access_key_id: AKIAJPTKESQQK3GFXN2Q
