--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ after_success:
 - mkdir ${TRAVIS_BUILD_DIR}/artifacts && cp ${TRAVIS_BUILD_DIR}/siva-parent/siva-distribution/target/*.zip
   artifacts
 - mv artifacts/*.zip artifacts/distribution.zip && ls -al artifacts
+- "chmod 600 ${TRAVIS_BUILD_DIR}/ci-deploy-key"
 - "${TRAVIS_BUILD_DIR}/deploy.sh"
 deploy:
   provider: s3
