--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,15 @@ jdk:
 - oraclejdk8
 addons:
   ssh_known_hosts: demoapps.eu
+  apt:
+    packages:
+      - python3
+      - python3-setuptools
 before_install:
 - openssl aes-256-cbc -K $encrypted_befc5bd7f29f_key -iv $encrypted_befc5bd7f29f_iv
   -in ci-deploy-key.enc -out ci-deploy-key -d
 - export TZ=Estonia/Tallinn
-- pip install pyyaml
+- easy_install3 --user pyyaml
 branches:
   only:
   - develop
