--- a/.travis.yml
+++ b/.travis.yml
@@ -7,13 +7,14 @@ addons:
   apt:
     packages:
       - python3
+      - python3-dev
       - python3-setuptools
 before_install:
 - openssl aes-256-cbc -K $encrypted_befc5bd7f29f_key -iv $encrypted_befc5bd7f29f_iv
   -in ci-deploy-key.enc -out ci-deploy-key -d
 - export TZ=Estonia/Tallinn
 - easy_install3 --user pyyaml
-branches:
+branchespython-dev:
   only:
   - develop
 install: true
