--- a/siva-parent/pom.xml
+++ b/siva-parent/pom.xml
@@ -28,6 +28,7 @@
         <mockito.version>2.0.2-beta</mockito.version>
         <powermock.version>1.6.2</powermock.version>
         <dss.version>4.6.d4j.2</dss.version>
+        <cxf.version>3.1.4</cxf.version>
     </properties>
 
     <dependencyManagement>
@@ -62,6 +63,18 @@
                 <version>${spring.boot.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+
+            <!-- Apache CXF -->
+            <dependency>
+                <groupId>org.apache.cxf</groupId>
+                <artifactId>cxf-rt-frontend-jaxws</artifactId>
+                <version>${cxf.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.cxf</groupId>
+                <artifactId>cxf-rt-transports-http</artifactId>
+                <version>${cxf.version}</version>
             </dependency>
 
             <dependency>
