--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,8 @@ before_install:
 - openssl aes-256-cbc -K $encrypted_befc5bd7f29f_key -iv $encrypted_befc5bd7f29f_iv
   -in ci-deploy-key.enc -out ci-deploy-key -d
 - export TZ=Estonia/Tallinn
+- easy_install3 --user future
+- easy_install3 --user pyresttest
 - easy_install3 --user pyyaml
 - easy_install3 --user requests
 branchespython-dev:
@@ -24,6 +26,7 @@ branchespython-dev:
 install: true
 script:
 - "./mvnw clean install -q"
+- "pyresttest http://api.demoapps.eu build-helpers/system-test.yml"
 after_success:
 - "./mvnw jacoco:report coveralls:report -q -Dcoveralls.repo.token=$COVERALLS_REPO_TOKEN"
 - mkdir ${TRAVIS_BUILD_DIR}/artifacts && cp ${TRAVIS_BUILD_DIR}/siva-parent/siva-distribution/target/*.zip
