--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,8 @@ install: true
 script:
 - "./mvnw clean install -q"
 - "${TRAVIS_BUILD_DIR}/build-helpers/system-test-prepare.sh"
-- "sleep 40 && pyresttest http://demoapps.eu:7000 ${TRAVIS_BUILD_DIR}/build-helpers/system-test.yml"
+- sleep 100
+- "pyresttest http://demoapps.eu:7000 ${TRAVIS_BUILD_DIR}/build-helpers/system-test.yml"
 after_script:
 - ssh -i ci-deploy-key ci-deploy@demoapps.eu "bash -s" < ${TRAVIS_BUILD_DIR}/build-helpers/stage-deploy-cleanup.sh
 after_success:
