--- a/siva-parent/pom.xml
+++ b/siva-parent/pom.xml
@@ -144,6 +144,11 @@
                 </exclusions>
             </dependency>
             <dependency>
+                <groupId>org.webjars.bower</groupId>
+                <artifactId>tether</artifactId>
+                <version>1.3.2</version>
+            </dependency>
+            <dependency>
                 <groupId>org.webjars</groupId>
                 <artifactId>dropzone</artifactId>
                 <version>4.2.0</version>
@@ -156,7 +161,7 @@
             <dependency>
                 <groupId>org.webjars.bower</groupId>
                 <artifactId>jquery</artifactId>
-                <version>3.0.0</version>
+                <version>2.2.4</version>
             </dependency>
             <dependency>
                 <groupId>org.webjars.bower</groupId>
