--- a/siva-parent/pom.xml
+++ b/siva-parent/pom.xml
@@ -19,14 +19,14 @@
     <parent>
         <artifactId>siva</artifactId>
         <groupId>ee.openid.siva</groupId>
-        <version>3.7.0</version>
+        <version>3.8.0-test</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>siva-parent</artifactId>
     <packaging>pom</packaging>
     <name>SiVa webapp and other core modules</name>
-    <version>3.7.0</version>
+    <version>3.8.0-test</version>
 
     <modules>
         <module>siva-validation-proxy</module>
