--- a/validation-services-parent/pom.xml
+++ b/validation-services-parent/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <artifactId>siva</artifactId>
         <groupId>ee.openid.siva</groupId>
-        <version>3.7.0</version>
+        <version>3.8.0-test</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
