--- a/siva-parent/siva-webapp/src/main/resources/application.yml
+++ b/siva-parent/siva-webapp/src/main/resources/application.yml
@@ -7,6 +7,11 @@ siva:
     request:
       max-request-size-limit: 27MB # 20 MB + base64 overhead (ceil(20MB / 3) * 4) rounded up
 
+t-level-signature-filter:
+  filter-type: ALLOWED_COUNTRIES
+  countries:
+    - LV
+
 management:
   health:
     diskspace:
