--- a/validation-services-parent/timemark-container-validation-service/pom.xml
+++ b/validation-services-parent/timemark-container-validation-service/pom.xml
@@ -18,7 +18,7 @@
     <parent>
         <artifactId>validation-services-parent</artifactId>
         <groupId>ee.openid.siva</groupId>
-        <version>3.8.0-test</version>
+        <version>3.8.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
