--- a/pom.xml
+++ b/pom.xml
@@ -218,6 +218,33 @@
                     <argLine>${argLine} -Dfile.encoding=UTF-8 -Xmx1024m</argLine>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-enforcer-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>enforce</goal>
+                        </goals>
+                        <configuration>
+                            <rules>
+                                <!-- Allow only single edition (currently latest is jdk18on) of Bouncy Castle libraries.
+                                     Other libraries may reference different editions of the same Bouncy Castle library
+                                     (bcprov-jdk15on vs bcprov-jdk18on), but duplicate classes on classpath must be
+                                     avoided. -->
+                                <bannedDependencies>
+                                    <excludes>
+                                        <exclude>org.bouncycastle:*</exclude>
+                                    </excludes>
+                                    <includes>
+                                        <include>org.bouncycastle:*-jdk18on</include>
+                                    </includes>
+                                </bannedDependencies>
+                            </rules>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
