--- a/siva-parent/siva-webapp/src/main/resources/application.yml
+++ b/siva-parent/siva-webapp/src/main/resources/application.yml
@@ -30,4 +30,11 @@ management:
     version:
       enabled: true
 
-
+spring:
+  mvc:
+    # Allow custom handler for NoHandlerFoundException
+    throw-exception-if-no-handler-found: true
+  web:
+    resources:
+      # Allow custom handler for NoHandlerFoundException
+      add-mappings: false
